<resources>
    <string name="app_name">AssignmentApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="pg">13+</string>
    <string name="title">Avengers: End Game</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="reviews_count">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="plot_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert<br/> Downey Jr.</string>
    <string name="evans">Chris Evans</string>
    <string name="ruffalo">Mark Ruffalo</string>
    <string name="hemsworth">Chris<br/> Hemsworth</string>
</resources>